# Win32Fuzzer

./: .gitignore  Cargo.toml  LICENSE  README.md
CSVCreator/: Cargo.toml
CSVCreator/src/: main.rs
Reproducer/: Cargo.toml
Reproducer/src/: classes_origin.rs  main.rs
WinProject/: Cargo.toml  printer.rs
WinProject/src/: basic_data.rs  main.rs  more_bad_data.rs
src/: automatic_type_renames.rs  create_main_file.rs  create_project_file.rs  find_things.rs  generate_reproducer_file.rs  main.rs  parse_file.rs  settings.rs  sort_settings.rs
