[package]
name = "win_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Gaming",
    #"Foundation_Numerics",# ld: cannot find -ld2d1
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct2D", # ld: cannot find -ld2d1
    "Win32_Graphics_Direct2D_Common", # ld: cannot find -ld2d1
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
]
